--- a/extension/trunk/source/com/bedrock/extension/view/extras/ClassGeneratorView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/extras/ClassGeneratorView.mxml
@@ -2,9 +2,9 @@
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" initialize="this.bootup()">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.plugin.util.VariableUtil;
 			import com.bedrock.extension.controller.ExtrasController;
 			import com.bedrock.extension.controller.ProjectController;
-			import com.bedrock.extras.util.VariableUtil;
 			import mx.controls.Alert;
 			
 			public function bootup():void
@@ -15,7 +15,22 @@
 				
 				this.updateList();
 			}
-			
+			public function resetList():void
+			{
+				this.nameText.text = "";
+				
+				this.viewCheck.selected = false
+				this.modelCheck.selected = false;
+				this.controllerCheck.selected = false;
+				this.managerCheck.selected = false;
+				this.dataCheck.selected = false;
+				this.eventCheck.selected = false;
+				this.commandCheck.selected = false;
+				
+				this.toggleModelSingleton();
+				this.toggleControllerSingleton();
+				this.toggleManagerSingleton();
+			}
 			public function updateList():void
 			{
 				ExtrasController.getInstance().classGenerator.reset();
@@ -70,6 +85,7 @@
 			{
 				if ( ExtrasController.getInstance().classGenerator.generateClasses() ) {
 					Alert.show( "Files created successfully!", "Attention!" );
+					this.resetList();
 				} else {
 					Alert.show( "File creation fail!", "Attention!" );
 				}
