--- a/extension/trunk/source/com/bedrock/extension/view/extras/SamplerView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/extras/SamplerView.mxml
@@ -2,6 +2,7 @@
 <mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.plugin.util.VariableUtil;
 			import mx.events.ItemClickEvent;
 			import mx.containers.ViewStack;
 			import com.bedrock.framework.core.logging.Logger;
@@ -11,7 +12,6 @@
 			import mx.controls.TextInput;
 			import mx.controls.NumericStepper;
 			import mx.controls.CheckBox;
-			import com.bedrock.extras.util.VariableUtil;
 			import com.bedrock.extras.util.ClassUtil;
 			import mx.collections.ArrayCollection;
 			import com.bedrock.framework.plugin.storage.HashMap;
