--- a/extension/trunk/source/com/bedrock/extension/view/popups/ContentCreationView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ContentCreationView.mxml
@@ -2,15 +2,23 @@
 <GenericProjectPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.plugin.util.ArrayUtil;
 			import com.bedrock.extension.controller.ProjectController;
 			import mx.managers.PopUpManager;
 			
-			public function populate():void
+			public function populate( $selectedNode:XML ):void
 			{
 				this.idText.text = "";
             	this.labelText.text = "";
             	this.initialLoadCheck.selected = false;
             	this.initialTransitionCheck.selected = false;
+            	
+            	this.contentGroupCombo.dataProvider = ProjectController.getInstance().config.contentGroupsArray;
+				if ( $selectedNode != null && $selectedNode.name() == "contentGroup" ) {
+					this.contentGroupCombo.selectedIndex = ArrayUtil.findIndex( ProjectController.getInstance().config.contentGroupsArray.source, $selectedNode.@id.toString() );
+				} else {
+					this.contentGroupCombo.selectedIndex = 0;
+				}
             	
             	this.showPopup();
 			}
@@ -27,7 +35,7 @@
 	            	xmlContent.@container = this.containerCombo.selectedLabel;
 	            	ProjectController.getInstance().config.createContent( xmlContent, this.contentGroupCombo.selectedLabel, this.templateCombo.selectedLabel );
 	            	
-	            	this.closePopup();
+	            	this.closePopup( true );
             	}
             }
 			
@@ -81,11 +89,11 @@
 			<mx:HRule width="100%"/>
 			
 			<mx:FormItem label="Content Group" width="100%">
-				<mx:ComboBox id="contentGroupCombo" dataProvider="{ ProjectController.getInstance().config.contentGroupsArray }" change="this._onGroupChange( event )" />
+				<mx:ComboBox id="contentGroupCombo" change="this._onGroupChange( event )" />
 			</mx:FormItem>
 			
 			<mx:FormItem label="Asset Group" width="100%">
-				<mx:ComboBox id="assetGroupCombo" dataProvider="{ ProjectController.getInstance().config.assetGroupsArray }" />
+				<mx:ComboBox id="assetGroupCombo" dataProvider="{ ProjectController.getInstance().config.contentAssetGroupsArray }" />
 			</mx:FormItem>
 		</mx:Form>
 		
@@ -104,6 +112,6 @@
 			<mx:CheckBox  id="autoDisposeAssetsCheck" label="Auto Dispose Assets" />
 		</mx:Form>
 			
-		<misc:CreationControlBar cancel="this.closePopup()" create="this._create()"/>
+		<misc:CreationControlBar cancel="this.closePopup( false )" create="this._create()"/>
 	</mx:Panel>
 </GenericProjectPopupView>
