--- a/extension/trunk/source/com/bedrock/extension/view/popups/ExtensionSettingsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ExtensionSettingsView.mxml
@@ -2,11 +2,11 @@
 <GenericExtensionPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.plugin.util.VariableUtil;
 			import com.bedrock.extension.controller.ExtensionController;
 			import mx.managers.PopUpManager;
 			import mx.controls.Alert;
 			import mx.events.CloseEvent;
-			import com.bedrock.extras.util.VariableUtil;
 			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
 			
 			public function populate():void
