--- a/extension/trunk/source/com/bedrock/extension/view/popups/GenericProjectPopupView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/GenericProjectPopupView.mxml
@@ -2,6 +2,7 @@
 <mx:Box xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.engine.BedrockEngine;
 			import com.bedrock.extension.event.ExtensionEvent;
 			import com.bedrock.extension.controller.ProjectController;
 			import mx.managers.PopUpManager;
@@ -12,9 +13,9 @@
 				PopUpManager.centerPopUp( this );
 			}
 			
-			public function closePopup():void
+			public function closePopup( $save:Boolean ):void
 			{
-				ProjectController.getInstance().config.autoSaveConfig();
+				if ( $save ) ProjectController.getInstance().config.autoSaveConfig();
 				PopUpManager.removePopUp( this );
 				
 				this.dispatchEvent( new ExtensionEvent( ExtensionEvent.CLOSE, this ) );
