--- a/extension/trunk/source/com/bedrock/extension/view/project/AssetsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/AssetsView.mxml
@@ -2,6 +2,7 @@
 <mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="this.bootup()" styleName="padded5px" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.engine.data.BedrockAssetData;
 			import mx.managers.PopUpManager;
 			import com.bedrock.extension.view.popups.AssetGroupCreationView;
 			import com.bedrock.extension.view.popups.AssetCreationView;
@@ -52,13 +53,12 @@
             {
             	switch( this.hierarchyControlBar.creationCombo.selectedItem.value ) {
             		case "asset" :
-						this._assetCreationView.populate();
+						this._assetCreationView.populate( this.nodeTree.selectedItem as XML );
             			break;
             		case "assetGroup" :
 						this._assetGroupCreationView.populate();
             			break;
             	}
-            	this._resetInterface();
             }
             private function deleteNode():void
             {
@@ -71,7 +71,8 @@
 							this.deleteAssetGroup();
             				break;
             		}
-	            	this._resetInterface();
+	            	ProjectController.getInstance().config.autoSaveConfig();
+	            	this.attributeEditor.clearForm();
             	}
             }
             
@@ -93,37 +94,38 @@
             /*
             Insterface Functions
             */
-            private function _resetInterface():void
-            {
-            	ProjectController.getInstance().config.autoSaveConfig();
-            	this._deselect();
-            	this._applyIcons();
-            }
             private function _deselect():void
 			{
 				this.nodeTree.selectedIndex = -1;
 				this.attributeEditor.clearForm();
             }
+            private function _duplicate():void
+			{
+				if ( this.nodeTree.selectedItem != null ) {
+					ProjectController.getInstance().config.assets.appendChild( new XML( this.nodeTree.selectedItem ) );
+					ProjectController.getInstance().config.autoSaveConfig();
+				}
+            }
 			private function _applyIcons():void
 			{
 				for each( var xmlNode:XML in ProjectController.getInstance().config.assets..asset ) {
 					switch( String( xmlNode.@type ) ) {
-						case BedrockData.STYLESHEET :
+						case BedrockAssetData.STYLESHEET :
 							this.nodeTree.setItemIcon( xmlNode, StylesheetIcon, StylesheetIcon );
 							break;
-						case BedrockData.IMAGE :
+						case BedrockAssetData.IMAGE :
 							this.nodeTree.setItemIcon( xmlNode, ImageIcon, ImageIcon );
 							break;
-						case BedrockData.AUDIO :
+						case BedrockAssetData.AUDIO :
 							this.nodeTree.setItemIcon( xmlNode, SoundIcon, SoundIcon );
 							break;
-						case BedrockData.SWF :
+						case BedrockAssetData.SWF :
 							this.nodeTree.setItemIcon( xmlNode, SWFIcon, SWFIcon );
 							break;
-						case BedrockData.VIDEO :
+						case BedrockAssetData.VIDEO :
 							this.nodeTree.setItemIcon( xmlNode, VideoIcon, VideoIcon );
 							break;
-						case BedrockData.XML :
+						case BedrockAssetData.XML :
 							this.nodeTree.setItemIcon( xmlNode, XMLIcon, XMLIcon );
 							break;
 						default :
@@ -139,6 +141,8 @@
 			{
 				this.attributeEditor.populateForm( this.nodeTree.selectedItem as XML );
             }
+            
+            
             
             private function _onConfigLoaded( $event:ExtensionEvent ):void
 			{
@@ -173,9 +177,9 @@
 				<mx:AdvancedDataGridColumn headerText="Initial Load" resizable="false" sortable="false" dataField="" itemRenderer="com.bedrock.extension.view.cells.AssetGroupInitialLoadCell" />
 			</mx:columns>
 		</mx:AdvancedDataGrid>
-		<misc:HierarchyControlBar id="hierarchyControlBar" creationOptions="{ ProjectController.getInstance().resources.getBundle( 'assetCreationOptions' ) }" createNode="this.createNode()" deleteNode="this.deleteNode()" deselectNode="this._deselect()" />
+		<misc:HierarchyControlBar id="hierarchyControlBar" creationOptions="{ ProjectController.getInstance().resources.getBundle( 'assetCreationOptions' ) }" createNode="this.createNode()" deleteNode="this.deleteNode()" deselectNode="this._deselect()" duplicateNode="this._duplicate()" />
 	</mx:Panel>
 	
-	<misc:AttributeEditor id="attributeEditor" />
+	<misc:AttributeEditor id="attributeEditor" title="Editing : { this.nodeTree.selectedItem.@id }" />
 	
 </mx:HDividedBox>
