--- a/extension/trunk/source/com/bedrock/extension/view/project/BrowserView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/BrowserView.mxml
@@ -2,9 +2,9 @@
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" initialize="this.bootup()" styleName="padded5px" xmlns:view="com.bedrock.extension.base.view.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.plugin.util.VariableUtil;
 			import com.bedrock.extension.controller.ProjectController;
 			import com.bedrock.extension.event.ExtensionEvent;
-			import com.bedrock.extras.util.VariableUtil;
 			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
 			import com.bedrock.framework.core.logging.Logger;
 			import mx.collections.HierarchicalData;
